<resources>
    <string name="app_name">day 29(Navigation_Drawer)</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="study_app_dev_with_us">Study App Dev with us</string>
    <string name="learning_app">Learning App</string>
    <string name="category">Category</string>
    <string name="coding">Coding</string>
    <string name="music">Music</string>
    <string name="cooking">Cooking</string>
    <string name="gaming">Gaming</string>
    <string name="public_speaking">Speaking</string>
    <string name="video_editing">Video_Editing</string>
    <string name="categories">Categories</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="this_is_logout_screen">This is Logout Screen</string>
</resources>