<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.home.HomeFragment">

    <ImageView
        android:id="@+id/img1"
        android:layout_width="105dp"
        android:layout_height="110dp"
        android:src="@drawable/self_study"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/text_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:textColor="@color/black"
        android:background="#C87DDA"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="25sp"
       />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardElevation="15dp"
            app:cardCornerRadius="18dp"
            android:layout_weight="1"
            android:layout_margin="20dp"
            >
           <LinearLayout
               android:layout_width="140dp"
               android:layout_height="140dp"
               android:orientation="vertical">
               <ImageView
                   android:id="@+id/img2"
                   android:layout_width="100dp"
                   android:layout_height="100dp"
                   android:layout_gravity="center"
                   android:src="@drawable/programming"
                   android:scaleType="centerCrop"
                   />
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/coding"
                   android:textColor="@color/black"
                   android:layout_gravity="center"
                   android:textStyle="bold"
                   android:textSize="20sp"
                   />
           </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardElevation="15dp"
            app:cardCornerRadius="15dp"
            android:layout_weight="1"
            android:layout_margin="20dp"
            >
            <LinearLayout
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/img3"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:src="@drawable/music"
                    android:scaleType="centerCrop"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/music"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardElevation="15dp"
            app:cardCornerRadius="18dp"
            android:layout_weight="1"
            android:layout_margin="20dp"
            >
            <LinearLayout
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/img4"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:src="@drawable/video_editing"
                    android:scaleType="centerCrop"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/video_editing"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardElevation="15dp"
            app:cardCornerRadius="15dp"
            android:layout_weight="1"
            android:layout_margin="20dp"
            >
            <LinearLayout
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/img5"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:src="@drawable/speaker"
                    android:scaleType="centerCrop"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/public_speaking"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardElevation="15dp"
            app:cardCornerRadius="18dp"
            android:layout_weight="1"
            android:layout_margin="20dp"
            >
            <LinearLayout
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/img6"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:src="@drawable/gaming"
                    android:scaleType="centerCrop"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gaming"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardElevation="15dp"
            app:cardCornerRadius="15dp"
            android:layout_weight="1"
            android:layout_margin="20dp"
            >
            <LinearLayout
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/img7"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:src="@drawable/cooking"
                    android:scaleType="centerCrop"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cooking"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</LinearLayout>